; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_window.c_OpenCommon.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/xcb/extr_window.c_OpenCommon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_17__ = type { %struct.TYPE_18__*, i32*, %struct.TYPE_15__, %struct.TYPE_14__, i32 }
%struct.TYPE_18__ = type { i32, i8*, i8*, i8*, i8*, i8*, %struct.TYPE_16__, i8*, i32* }
%struct.TYPE_16__ = type { i32* }
%struct.TYPE_15__ = type { i8* }
%struct.TYPE_14__ = type { i8* }

@VLC_ENOMEM = common dso_local global i32 0, align 4
@VOUT_WINDOW_TYPE_XID = common dso_local global i32 0, align 4
@ops = common dso_local global i32 0, align 4
@XA_WM_NAME = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"ASCII\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"VLC media player\00", align 1
@XA_WM_ICON_NAME = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [4 x i8] c"VLC\00", align 1
@XCB_PROP_MODE_REPLACE = common dso_local global i32 0, align 4
@XA_WM_CLASS = common dso_local global i32 0, align 4
@XA_STRING = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [8 x i8] c"vlc\00Vlc\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"UTF8_STRING\00", align 1
@.str.5 = private unnamed_addr constant [13 x i8] c"_NET_WM_NAME\00", align 1
@.str.6 = private unnamed_addr constant [18 x i8] c"_NET_WM_ICON_NAME\00", align 1
@.str.7 = private unnamed_addr constant [15 x i8] c"WM_WINDOW_ROLE\00", align 1
@.str.8 = private unnamed_addr constant [14 x i8] c"_NET_WM_STATE\00", align 1
@.str.9 = private unnamed_addr constant [20 x i8] c"_NET_WM_STATE_ABOVE\00", align 1
@.str.10 = private unnamed_addr constant [20 x i8] c"_NET_WM_STATE_BELOW\00", align 1
@.str.11 = private unnamed_addr constant [25 x i8] c"_NET_WM_STATE_FULLSCREEN\00", align 1
@.str.12 = private unnamed_addr constant [16 x i8] c"_MOTIF_WM_HINTS\00", align 1
@.str.13 = private unnamed_addr constant [12 x i8] c"video-title\00", align 1
@.str.14 = private unnamed_addr constant [10 x i8] c"vlc-video\00", align 1
@Thread = common dso_local global i32 0, align 4
@VLC_THREAD_PRIORITY_LOW = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_17__*, i8*, i32*, i8*, i8*)* @OpenCommon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenCommon(%struct.TYPE_17__* %0, i8* %1, i32* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_17__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.TYPE_18__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i8*, align 8
  %23 = alloca i8*, align 8
  %24 = alloca i8*, align 8
  %25 = alloca i8*, align 8
  %26 = alloca i8*, align 8
  store %struct.TYPE_17__* %0, %struct.TYPE_17__** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32* %2, i32** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  %27 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %28 = call i32 @VLC_OBJECT(%struct.TYPE_17__* %27)
  %29 = call %struct.TYPE_18__* @vlc_obj_malloc(i32 %28, i32 72)
  store %struct.TYPE_18__* %29, %struct.TYPE_18__** %12, align 8
  %30 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %31 = icmp eq %struct.TYPE_18__* %30, null
  br i1 %31, label %32, label %34

32:                                               ; preds = %5
  %33 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %33, i32* %6, align 4
  br label %178

34:                                               ; preds = %5
  %35 = load i32, i32* @VOUT_WINDOW_TYPE_XID, align 4
  %36 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %36, i32 0, i32 4
  store i32 %35, i32* %37, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %39, i32 0, i32 3
  %41 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %40, i32 0, i32 0
  store i8* %38, i8** %41, align 8
  %42 = load i8*, i8** %8, align 8
  %43 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %44 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %43, i32 0, i32 2
  %45 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %44, i32 0, i32 0
  store i8* %42, i8** %45, align 8
  %46 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %46, i32 0, i32 1
  store i32* @ops, i32** %47, align 8
  %48 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %49 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %50 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %49, i32 0, i32 0
  store %struct.TYPE_18__* %48, %struct.TYPE_18__** %50, align 8
  %51 = load i32*, i32** %9, align 8
  %52 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %53 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %52, i32 0, i32 8
  store i32* %51, i32** %53, align 8
  %54 = load i8*, i8** %10, align 8
  %55 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %56 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %55, i32 0, i32 7
  store i8* %54, i8** %56, align 8
  %57 = load i32*, i32** %9, align 8
  %58 = load i8*, i8** %11, align 8
  %59 = load i8*, i8** @XA_WM_NAME, align 8
  %60 = call i8* @vlc_pgettext(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %61 = call i32 @set_ascii_prop(i32* %57, i8* %58, i8* %59, i8* %60)
  %62 = load i32*, i32** %9, align 8
  %63 = load i8*, i8** %11, align 8
  %64 = load i8*, i8** @XA_WM_ICON_NAME, align 8
  %65 = call i8* @vlc_pgettext(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %66 = call i32 @set_ascii_prop(i32* %62, i8* %63, i8* %64, i8* %65)
  %67 = load i32*, i32** %9, align 8
  %68 = load i8*, i8** %11, align 8
  %69 = call i32 @set_wm_hints(i32* %67, i8* %68)
  %70 = load i32*, i32** %9, align 8
  %71 = load i32, i32* @XCB_PROP_MODE_REPLACE, align 4
  %72 = load i8*, i8** %11, align 8
  %73 = load i32, i32* @XA_WM_CLASS, align 4
  %74 = load i32, i32* @XA_STRING, align 4
  %75 = call i32 @xcb_change_property(i32* %70, i32 %71, i8* %72, i32 %73, i32 %74, i32 8, i32 8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %76 = load i32*, i32** %9, align 8
  %77 = load i8*, i8** %11, align 8
  %78 = call i32 @set_hostname_prop(i32* %76, i8* %77)
  %79 = load i32*, i32** %9, align 8
  %80 = call i32 @intern_string(i32* %79, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  store i32 %80, i32* %13, align 4
  %81 = load i32*, i32** %9, align 8
  %82 = call i32 @intern_string(i32* %81, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.5, i64 0, i64 0))
  store i32 %82, i32* %14, align 4
  %83 = load i32*, i32** %9, align 8
  %84 = call i32 @intern_string(i32* %83, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.6, i64 0, i64 0))
  store i32 %84, i32* %15, align 4
  %85 = load i32*, i32** %9, align 8
  %86 = call i32 @intern_string(i32* %85, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.7, i64 0, i64 0))
  store i32 %86, i32* %16, align 4
  %87 = load i32*, i32** %9, align 8
  %88 = call i32 @intern_string(i32* %87, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.8, i64 0, i64 0))
  store i32 %88, i32* %17, align 4
  %89 = load i32*, i32** %9, align 8
  %90 = call i32 @intern_string(i32* %89, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.9, i64 0, i64 0))
  store i32 %90, i32* %18, align 4
  %91 = load i32*, i32** %9, align 8
  %92 = call i32 @intern_string(i32* %91, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0))
  store i32 %92, i32* %19, align 4
  %93 = load i32*, i32** %9, align 8
  %94 = call i32 @intern_string(i32* %93, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.11, i64 0, i64 0))
  store i32 %94, i32* %20, align 4
  %95 = load i32*, i32** %9, align 8
  %96 = call i32 @intern_string(i32* %95, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0))
  store i32 %96, i32* %21, align 4
  %97 = load i32*, i32** %9, align 8
  %98 = load i32, i32* %13, align 4
  %99 = call i8* @get_atom(i32* %97, i32 %98)
  store i8* %99, i8** %22, align 8
  %100 = load i32*, i32** %9, align 8
  %101 = load i32, i32* %14, align 4
  %102 = call i8* @get_atom(i32* %100, i32 %101)
  store i8* %102, i8** %23, align 8
  %103 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %104 = call i8* @var_InheritString(%struct.TYPE_17__* %103, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.13, i64 0, i64 0))
  store i8* %104, i8** %24, align 8
  %105 = load i8*, i8** %24, align 8
  %106 = icmp ne i8* %105, null
  br i1 %106, label %107, label %116

107:                                              ; preds = %34
  %108 = load i32*, i32** %9, align 8
  %109 = load i8*, i8** %11, align 8
  %110 = load i8*, i8** %22, align 8
  %111 = load i8*, i8** %23, align 8
  %112 = load i8*, i8** %24, align 8
  %113 = call i32 @set_string(i32* %108, i8* %109, i8* %110, i8* %111, i8* %112)
  %114 = load i8*, i8** %24, align 8
  %115 = call i32 @free(i8* %114)
  br label %123

116:                                              ; preds = %34
  %117 = load i32*, i32** %9, align 8
  %118 = load i8*, i8** %11, align 8
  %119 = load i8*, i8** %22, align 8
  %120 = load i8*, i8** %23, align 8
  %121 = call i8* @_(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %122 = call i32 @set_string(i32* %117, i8* %118, i8* %119, i8* %120, i8* %121)
  br label %123

123:                                              ; preds = %116, %107
  %124 = load i32*, i32** %9, align 8
  %125 = load i32, i32* %15, align 4
  %126 = call i8* @get_atom(i32* %124, i32 %125)
  store i8* %126, i8** %25, align 8
  %127 = load i32*, i32** %9, align 8
  %128 = load i8*, i8** %11, align 8
  %129 = load i8*, i8** %22, align 8
  %130 = load i8*, i8** %25, align 8
  %131 = call i8* @_(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %132 = call i32 @set_string(i32* %127, i8* %128, i8* %129, i8* %130, i8* %131)
  %133 = load i32*, i32** %9, align 8
  %134 = load i32, i32* %16, align 4
  %135 = call i8* @get_atom(i32* %133, i32 %134)
  store i8* %135, i8** %26, align 8
  %136 = load i32*, i32** %9, align 8
  %137 = load i8*, i8** %11, align 8
  %138 = load i8*, i8** %26, align 8
  %139 = call i32 @set_ascii_prop(i32* %136, i8* %137, i8* %138, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0))
  %140 = load i32*, i32** %9, align 8
  %141 = load i32, i32* %17, align 4
  %142 = call i8* @get_atom(i32* %140, i32 %141)
  %143 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %144 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %143, i32 0, i32 5
  store i8* %142, i8** %144, align 8
  %145 = load i32*, i32** %9, align 8
  %146 = load i32, i32* %18, align 4
  %147 = call i8* @get_atom(i32* %145, i32 %146)
  %148 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %149 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %148, i32 0, i32 4
  store i8* %147, i8** %149, align 8
  %150 = load i32*, i32** %9, align 8
  %151 = load i32, i32* %19, align 4
  %152 = call i8* @get_atom(i32* %150, i32 %151)
  %153 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %154 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %153, i32 0, i32 3
  store i8* %152, i8** %154, align 8
  %155 = load i32*, i32** %9, align 8
  %156 = load i32, i32* %20, align 4
  %157 = call i8* @get_atom(i32* %155, i32 %156)
  %158 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %159 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %158, i32 0, i32 2
  store i8* %157, i8** %159, align 8
  %160 = load i32*, i32** %9, align 8
  %161 = load i32, i32* %21, align 4
  %162 = call i8* @get_atom(i32* %160, i32 %161)
  %163 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %164 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %163, i32 0, i32 1
  store i8* %162, i8** %164, align 8
  %165 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %166 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %165, i32 0, i32 0
  %167 = load i32, i32* @Thread, align 4
  %168 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %169 = load i32, i32* @VLC_THREAD_PRIORITY_LOW, align 4
  %170 = call i64 @vlc_clone(i32* %166, i32 %167, %struct.TYPE_17__* %168, i32 %169)
  %171 = icmp ne i64 %170, 0
  br i1 %171, label %172, label %176

172:                                              ; preds = %123
  %173 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  %174 = call i32 @DeinitKeyboardExtension(%struct.TYPE_17__* %173)
  %175 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %175, i32* %6, align 4
  br label %178

176:                                              ; preds = %123
  %177 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %177, i32* %6, align 4
  br label %178

178:                                              ; preds = %176, %172, %32
  %179 = load i32, i32* %6, align 4
  ret i32 %179
}

declare dso_local %struct.TYPE_18__* @vlc_obj_malloc(i32, i32) #1

declare dso_local i32 @VLC_OBJECT(%struct.TYPE_17__*) #1

declare dso_local i32 @set_ascii_prop(i32*, i8*, i8*, i8*) #1

declare dso_local i8* @vlc_pgettext(i8*, i8*) #1

declare dso_local i32 @set_wm_hints(i32*, i8*) #1

declare dso_local i32 @xcb_change_property(i32*, i32, i8*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @set_hostname_prop(i32*, i8*) #1

declare dso_local i32 @intern_string(i32*, i8*) #1

declare dso_local i8* @get_atom(i32*, i32) #1

declare dso_local i8* @var_InheritString(%struct.TYPE_17__*, i8*) #1

declare dso_local i32 @set_string(i32*, i8*, i8*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @_(i8*) #1

declare dso_local i64 @vlc_clone(i32*, i32, %struct.TYPE_17__*, i32) #1

declare dso_local i32 @DeinitKeyboardExtension(%struct.TYPE_17__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
